config domain for mc world and skin service

--- a/scripts/skin_system/minecraft.conf
+++ b/scripts/skin_system/minecraft.conf
@@ -42,3 +42,21 @@ server {
 		fastcgi_pass unix:/run/php/php7.2-fpm.sock;
 	}
 }
+
+# nginx 80端口配置 （我的世界文件服务器）
+server {
+    listen  80;
+    server_name     mcworld.jokerhub.cn;
+    location / {
+        proxy_pass      http://localhost:8000; # 转发
+    }
+}
+
+# nginx 80端口配置 （我的世界皮肤上传服务）
+server {
+    listen  80;
+    server_name     mcskin.jokerhub.cn;
+    location / {
+        proxy_pass      http://localhost:8001; # 转发
+    }
+}
