--- a/scripts/skin_system/minecraft.conf
+++ b/scripts/skin_system/minecraft.conf
@@ -60,3 +60,15 @@ server {
         proxy_pass      http://localhost:8001; # 转发
     }
 }
+
+# nginx 80端口配置 （我的世界服务器实时状况）
+server {
+    listen 80;
+    server_name     mcweb.jokerhub.cn;
+    location / {
+        proxy_pass      http://localhost:8123; # 转发
+    }
+}
+
+# configure https command
+# eval "$(curl -sl https://raw.githubusercontent.com/wangzhizhou/Linux_scripts/master/https/certbot_nginx_ubuntu18.04.sh)"
