change website baseURL

--- a/website/config.toml
+++ b/website/config.toml
@@ -1,5 +1,5 @@
 title = "Joker@Minecraft 🇨🇳"
-baseURL = "https://example.org/"
+baseURL = "https://minecraft.jokerhub.cn"
 languageCode = ""
 
 # themesDir = "../.."
