add wiki submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "website/themes/OrzAnanke"]
 	path = website/themes/OrzAnanke
 	url = https://github.com/OrzGeeker/OrzAnanke.git
+[submodule "wiki"]
+	path = wiki
+	url = https://github.com/OrzGeeker/OrzMC.wiki.git
