--- a/scripts/skin_system/minecraft.conf
+++ b/scripts/skin_system/minecraft.conf
@@ -71,4 +71,4 @@ server {
 }
 
 # configure https command
-# eval "$(curl -sl https://raw.githubusercontent.com/wangzhizhou/Linux_scripts/master/https/certbot_nginx_ubuntu18.04.sh)"
+# eval "$(curl -sL https://raw.githubusercontent.com/wangzhizhou/Linux_scripts/master/https/certbot_nginx_ubuntu18.04.sh)"
