--- a/.github/workflows/website_publish.yml
+++ b/.github/workflows/website_publish.yml
@@ -9,7 +9,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Setup Hugo
+      uses: peaceiris/actions-hugo@v2
+      with:
+        hugo-version: '0.80.0'
+
+    - name: Checkout Repo
+      uses: actions/checkout@v2
+      with:
+        submodules: true  # Fetch Hugo themes (true OR recursive)
+        
     - name: Build and publish website
       run: |
         ./website_publish
