--- a/.github/workflows/website_publish.yml
+++ b/.github/workflows/website_publish.yml
@@ -16,7 +16,8 @@ jobs:
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
       with:
-        hugo-version: '0.80.0'
+        hugo-version: '0.85.0'
+        extended: true
 
     - name: Checkout Repo
       uses: actions/checkout@v2
