--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "wiki"]
 	path = wiki
 	url = https://github.com/OrzGeeker/OrzMC.wiki.git
+[submodule "swift"]
+	path = swift
+	url = https://github.com/OrzGeeker/OrzSwiftMC.git
