--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "webmc"]
 	path = webmc
 	url = https://github.com/OrzGeeker/OrzWebMC.git
+[submodule "paper_plugins_config"]
+	path = paper_plugins_config
+	url = https://github.com/OrzGeeker/paper_plugins_config.git
