add sponsor image

--- a/website/config.toml
+++ b/website/config.toml
@@ -32,7 +32,7 @@ Paginate = 3
   wechat = ""
   qq = ""
   
-  featured_image = '/images/minecraft_night_qq.png'
+  featured_image = '/images/bg_qq_sponsor.png'
   cover_dimming_class = "bg-black-10"
 
   recent_copy = "最近发布"
