--- a/.github/workflows/website_publish.yml
+++ b/.github/workflows/website_publish.yml
@@ -28,4 +28,4 @@ jobs:
       run: |
         git config user.name github-actions
         git config user.email github-actions@github.com
-        ./website_publish
+        ./publish_website
