--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "paper_plugins_config"]
 	path = paper_plugins_config
 	url = https://github.com/OrzGeeker/paper_plugins_config.git
+[submodule "python"]
+	path = python
+	url = https://github.com/OrzGeeker/OrzPythonMC.git
