--- a/.github/workflows/site_deploy.yml
+++ b/.github/workflows/site_deploy.yml
@@ -6,6 +6,7 @@ on:
       - master
     paths:
       - 'site/**'
+      - '.github/workflows/site_deploy.yml'
 
 jobs:
   publish:
@@ -14,13 +15,13 @@ jobs:
 
     steps:
     - name: Setup Hugo
-      uses: peaceiris/actions-hugo@v2
+      uses: peaceiris/actions-hugo@v3
       with:
         hugo-version: '0.128.0'
         extended: true
 
     - name: Checkout Repo
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
       with:
         submodules: true  # Fetch Hugo themes (true FOR recursive)
         
