--- a/.github/workflows/site_deploy.yml
+++ b/.github/workflows/site_deploy.yml
@@ -29,4 +29,4 @@ jobs:
       run: |
         git config user.name github-actions
         git config user.email github-actions@github.com
-        ./site/deploy
+        cd site && ./deploy
