--- a/.gitmodules
+++ b/.gitmodules
@@ -1,21 +1,28 @@
 [submodule "wiki"]
 	path = wiki
 	url = https://github.com/OrzGeeker/OrzMC.wiki.git
+	branch = main
 [submodule "swift"]
 	path = swift
 	url = https://github.com/OrzGeeker/OrzSwiftMC.git
+	branch = main
 [submodule "plugin"]
 	path = plugin
 	url = https://github.com/OrzGeeker/OrzMCPlugin.git
+	branch = main
 [submodule "webmc"]
 	path = webmc
 	url = https://github.com/OrzGeeker/OrzWebMC.git
+	branch = main
 [submodule "paper_plugins_config"]
 	path = paper_plugins_config
 	url = https://github.com/OrzGeeker/paper_plugins_config.git
+	branch = main
 [submodule "python"]
 	path = python
 	url = https://github.com/OrzGeeker/OrzPythonMC.git
+	branch = main
 [submodule "site/themes/OrzAnanke"]
 	path = site/themes/OrzAnanke
 	url = https://github.com/OrzGeeker/OrzAnanke.git
+	branch = main
