--- a/scripts/qqbot/nginx_service.conf
+++ b/scripts/qqbot/nginx_service.conf
@@ -8,3 +8,13 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
+# NapCatQQ OneBot API
+server {
+    server_name onebot.qqbot.jokerhub.cn;
+    location / {
+        proxy_pass http://127.0.0.1:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+}
