add api endpoint

--- a/scripts/qqbot/nginx_service.conf
+++ b/scripts/qqbot/nginx_service.conf
@@ -10,7 +10,7 @@ server {
 }
 # NapCatQQ OneBot API
 server {
-    server_name onebot.qqbot.jokerhub.cn;
+    server_name api.qqbot.jokerhub.cn;
     location / {
         proxy_pass http://127.0.0.1:3000;
         proxy_set_header Host $host;
