--- a/scripts/qqbot/nginx_service.conf
+++ b/scripts/qqbot/nginx_service.conf
@@ -2,7 +2,7 @@
 server {
     server_name qqbot.jokerhub.cn;
     location / {
-        proxy_pass http://127.0.0.1:6099/webui/login.html;
+        proxy_pass http://127.0.0.1:6099;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
