--- a/scripts/ubuntu/nginx_service.conf
+++ b/scripts/ubuntu/nginx_service.conf
@@ -33,3 +33,14 @@ server {
 		proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
+
+# MSCManager Panel Web
+server {
+    server_name mcs.jokerhub.cn;
+    location / {
+        proxy_pass http://127.0.0.1:23333;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+}
