--- a/scripts/ubuntu/nginx_minecraft.conf
+++ b/scripts/ubuntu/nginx_minecraft.conf
@@ -8,6 +8,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
+
 # NapCatQQ OneBot API
 server {
     server_name api.qqbot.jokerhub.cn;
@@ -44,3 +45,26 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
+
+# MSCManager Panel Daemon
+# server {
+#     server_name mcs.jokerhub.cn;
+#     location / {
+#         # 后端 WebSocket 服务器地址
+#         proxy_pass http://127.0.0.1:24444;
+#         # WebSocket 必需的头信息
+#         proxy_http_version 1.1;
+#         proxy_set_header Upgrade $http_upgrade;
+#         proxy_set_header Connection "upgrade";
+#         proxy_set_header Host $host;
+#         # 超时设置
+#         proxy_read_timeout 3600s;
+#         proxy_send_timeout 3600s;
+#         # 安全相关头信息
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+# 		proxy_set_header X-Forwarded-Proto $scheme;
+#         # 禁用缓冲
+#         proxy_buffering off;
+#     }
+# }
