--- a/scripts/ubuntu/nginx_minecraft.conf
+++ b/scripts/ubuntu/nginx_minecraft.conf
@@ -23,15 +23,16 @@ server {
 # NapCatQQ OneBot WebSocket
 server {
     server_name ws.qqbot.jokerhub.cn;
+    proxy_hide_header Upgrade;
     location / {
         proxy_pass http://127.0.0.1:3001;
-		proxy_http_version 1.1;
+        proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
 
@@ -47,24 +48,23 @@ server {
 }
 
 # MSCManager Panel Daemon
-# server {
-#     server_name mcs.jokerhub.cn;
-#     location / {
-#         # 后端 WebSocket 服务器地址
-#         proxy_pass http://127.0.0.1:24444;
-#         # WebSocket 必需的头信息
-#         proxy_http_version 1.1;
-#         proxy_set_header Upgrade $http_upgrade;
-#         proxy_set_header Connection "upgrade";
-#         proxy_set_header Host $host;
-#         # 超时设置
-#         proxy_read_timeout 3600s;
-#         proxy_send_timeout 3600s;
-#         # 安全相关头信息
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-# 		proxy_set_header X-Forwarded-Proto $scheme;
-#         # 禁用缓冲
-#         proxy_buffering off;
-#     }
-# }
+server {
+    listen 24444;
+    server_name mcs.jokerhub.cn;
+    # proxy_hide_header Upgrade;/
+    location / {
+        proxy_pass http://127.0.0.1:24444;
+        # WebSocket 必需的头信息
+        # proxy_http_version 1.1;
+        # proxy_set_header Upgrade $http_upgrade;
+        # proxy_set_header Connection "upgrade";
+        # 安全相关头信息
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		# proxy_set_header X-Forwarded-Proto $scheme;
+        # 禁用缓存
+        # proxy_request_buffering off;
+        # proxy_buffering off;
+    }
+}
