--- a/scripts/ubuntu/nginx_minecraft.conf
+++ b/scripts/ubuntu/nginx_minecraft.conf
@@ -26,12 +26,13 @@ server {
     proxy_hide_header Upgrade;
     location / {
         proxy_pass http://127.0.0.1:3001;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # Websocket 协议升级
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
@@ -44,27 +45,42 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header REMOTE-HOST $remote_addr;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        client_max_body_size 0;
+        proxy_request_buffering off;
+        proxy_buffering off;
+        proxy_cookie_flags ~ secure;
     }
+    gzip on;
+    gzip_types text/plain text/css application/javascript application/xml application/json;
+    gzip_proxied any;
+    gzip_comp_level 5;
+    gzip_min_length 1k;
 }
 
 # MSCManager Panel Daemon
 server {
-    listen 24444;
-    server_name mcs.jokerhub.cn;
-    # proxy_hide_header Upgrade;/
+    server_name node.mcs.jokerhub.cn;
+    proxy_hide_header Upgrade;
     location / {
         proxy_pass http://127.0.0.1:24444;
-        # WebSocket 必需的头信息
-        # proxy_http_version 1.1;
-        # proxy_set_header Upgrade $http_upgrade;
-        # proxy_set_header Connection "upgrade";
-        # 安全相关头信息
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		# proxy_set_header X-Forwarded-Proto $scheme;
-        # 禁用缓存
-        # proxy_request_buffering off;
-        # proxy_buffering off;
+        proxy_set_header REMOTE-HOST $remote_addr;
+        # Websocket 协议升级
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        client_max_body_size 0;
+        proxy_request_buffering off;
+        proxy_buffering off;
     }
+    gzip on;
+    gzip_types text/plain text/css application/javascript application/xml application/json;
+    gzip_proxied any;
+    gzip_comp_level 5;
+    gzip_min_length 1k;
 }
+# MCSManager配置参考：https://docs.mcsmanager.com/ops/proxy_https.html#connect-via-https
