fix mcsmanager service

--- a/scripts/ubuntu/nginx_minecraft.conf
+++ b/scripts/ubuntu/nginx_minecraft.conf
@@ -84,3 +84,4 @@ server {
     gzip_min_length 1k;
 }
 # MCSManager配置参考：https://docs.mcsmanager.com/ops/proxy_https.html#connect-via-https
+# change daemon node link: wss://node.mcs.jokerhub.cn
