--- a/scripts/ubuntu/nginx_minecraft.conf
+++ b/scripts/ubuntu/nginx_minecraft.conf
@@ -29,11 +29,10 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header REMOTE-HOST $remote_addr;
         # Websocket 协议升级
-        proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
 
