--- a/scripts/ubuntu/nginx_minecraft.conf
+++ b/scripts/ubuntu/nginx_minecraft.conf
@@ -1,4 +1,4 @@
-# napcatQQ WebUI Access
+# napcatQQ WebUI Web Page
 server {
     server_name qqbot.jokerhub.cn;
     location / {
@@ -9,7 +9,7 @@ server {
     }
 }
 
-# NapCatQQ OneBot API
+# NapCatQQ OneBot Http Server
 server {
     server_name api.qqbot.jokerhub.cn;
     location / {
@@ -20,16 +20,14 @@ server {
     }
 }
 
-# NapCatQQ OneBot WebSocket
+# NapCatQQ OneBot WebSocket Server
 server {
     server_name ws.qqbot.jokerhub.cn;
-    proxy_hide_header Upgrade;
     location / {
         proxy_pass http://127.0.0.1:3001;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header REMOTE-HOST $remote_addr;
         # Websocket 协议升级
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -44,43 +42,21 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header REMOTE-HOST $remote_addr;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        client_max_body_size 0;
-        proxy_request_buffering off;
-        proxy_buffering off;
-        proxy_cookie_flags ~ secure;
     }
-    gzip on;
-    gzip_types text/plain text/css application/javascript application/xml application/json;
-    gzip_proxied any;
-    gzip_comp_level 5;
-    gzip_min_length 1k;
 }
 
 # MSCManager Panel Daemon
 server {
     server_name node.mcs.jokerhub.cn;
-    proxy_hide_header Upgrade;
     location / {
         proxy_pass http://127.0.0.1:24444;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header REMOTE-HOST $remote_addr;
         # Websocket 协议升级
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-        client_max_body_size 0;
-        proxy_request_buffering off;
-        proxy_buffering off;
     }
-    gzip on;
-    gzip_types text/plain text/css application/javascript application/xml application/json;
-    gzip_proxied any;
-    gzip_comp_level 5;
-    gzip_min_length 1k;
 }
 # MCSManager配置参考：https://docs.mcsmanager.com/ops/proxy_https.html#connect-via-https
 # change daemon node link: wss://node.mcs.jokerhub.cn
